/*
Copyright Â© 2020 Alessandro Segala (@ItalyPaleAle)

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU Affero General Public License as published
by the Free Software Foundation, version 3 of the License.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU Affero General Public License for more details.

You should have received a copy of the GNU Affero General Public License
along with this program.  If not, see <https://www.gnu.org/licenses/>.
*/

syntax = "proto3";

package statiko;

option go_package = "github.com/statiko-dev/statiko/shared/proto";

import "common.proto";

// Represents the node's state
message StateStore {
  // List of sites
  repeated Site sites = 1;

  // List of TLS certificates, mapped by their ID
  map<string,TLSCertificate> certificates = 2;

  // Other secrets (encrypted)
  map<string,bytes> secrets = 3;

  // DH parameters
  DHParams dh_params = 4;
}

// Configuration for a TLS certificate
message TLSCertificate {
  // Certificate type
  enum Type {
    // Null value (should not be used)
    NULL = 0;
    // Imported external certificate
    IMPORTED = 0x1;
    // Self-signed certificate
    SELF_SIGNED = 0x2;
    // ACME (Let's Encrypt)
    ACME = 0x10;
    // Stored in Azure Key Vault
    AZURE_KEY_VAULT = 0x11;
  }
  Type type = 1;

  // Certificate name, version and data (used by certain types only)
  // Data is encrypted if present
  string name = 2;
  string version = 3;
  bytes data = 4;
}

// DH Parameters
message DHParams {
  // Generation date (UNIX timestamp)
  int64 date = 1;
  // PEM-encoded value
  string pem = 2;
}
